docroot/sites/all/themes/custom/virginsport/src/scss/style/components/_vs-subnav.scss
// Blocks
// ----------------------------------------------------------------------------

vs-subnav,
.vs-subnav {
  @include clearfix();
  @include transition(all .5s ease-in-out, background-color, 1ms);
  display: block;
  background-color: transparent;
  text-align: center;
  left: 0;
  right: 0;
  z-index: 999;

}


// Elements
// ----------------------------------------------------------------------------

.vs-subnav__list {
  margin: 0;
  padding: .875rem 1.25rem;
  white-space: nowrap;
  overflow-x: auto;
}

.vs-subnav__overlay {
  @include transition(all .5s ease-in-out);
  background-image: linear-gradient(-90deg, #F0F0F0 10%, rgba(240,240,240,0.00) 100%);
  content: '';
  height: 3.5rem;
  position: absolute;
  width: 60px;
  right: 0;
  z-index: 3;

  .vs-region--bg-image & {
    display: none;
  }
}

@each $color in map-keys($color-schemes) {
  $map: map_get($color-schemes, $color);

  .vs-region--gradient-#{$color} {

    @if map_get($map, 'is-solid') == false {
      .vs-subnav__overlay {
        display: none;
      }
    }

    .vs-subnav__link {
      color: map_get($map, 'text-color');

      &:hover,
      &:active,
      &:focus,
      &.vs-subnav__link--active {
        color: map_get($map, 'text-color');

        &:before {
          background-color: map_get($map, 'text-color');
        }
      }

      &:hover:before {
        background-color: map_get($map, 'text-color');
      }
    }

    .vs-subnav__link--active:before {
      background-color: map_get($map, 'text-color');
    }

    .vs-subnav__overlay {
      background-image: linear-gradient(-90deg, map_get($map, 'solid-color') 0%, rgba(map_get($map, 'solid-color'), 0) 100%);
    }
  }
}

.vs-subnav__item {
  display: inline-block;
  padding-left: .9375rem;
  padding-right: .9375rem;

  &:last-child {
    padding-right: 2.5rem;
  }
}

.vs-subnav__link {
  font-family: $font-family-serif;
  font-weight: 500;
  font-size: .75rem;
  color: $c-black;
  display: block;
  text-transform: uppercase;
  position: relative;
  padding-bottom: 0.4rem;

  &:before {
    @include transition(all .4s);
    content: '';
    background-color: transparent;
    position: absolute;
    left: 0;
    right:0;
    height: 2px;
    bottom: 0;
  }
}


// Modifiers
// ----------------------------------------------------------------------------

.vs-subnav--unpinned,
.vs-subnav--not-top {
  @include transition(all .5s ease-in-out, background-color 1ms);
  position: fixed;
  top: 0;

  .vs-subnav__list {
    padding-top: rem(19);
    padding-bottom: rem(20);
  }
}

.vs-subnav--pinned-on-main-nav {
  @include transform(translateY(55px));

  &.vs-subnav--top {
    @include transform(translateY(0));
  }

  .vs-menu-open & {
    opacity: 0;
  }
}


// Responsive
// ----------------------------------------------------------------------------

@include media-breakpoint-up(md) {
  .vs-subnav__overlay {
    height: rem(68);
  }

  .vs-subnav__item {
    padding-left: 1.25rem;
    padding-right: 1.25rem;
  }

  .vs-subnav__link {
    font-size: 1rem;
    line-height: 1rem;
    letter-spacing: 0.2px;
    padding-bottom: .55rem;
  }

  .vs-subnav--unpinned,
  .vs-subnav--not-top {
    .vs-subnav__list {
      padding-top: rem(20);
    }
  }
}

@include media-breakpoint-up(lg) {
  .vs-subnav__item:last-child {
    padding-right: 1.875rem;
  }

  .vs-subnav--pinned-on-main-nav {
    @include transform(translateY(60px));

    &.vs-subnav--top {
      @include transform(translateY(0));
    }
  }
}

@media screen and (min-width: $main-nav-breakpoint) {
  .vs-subnav__overlay--fixed-header {
    top: 0;
  }
}

